--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: #202124;
   color: white;
 }
@@ -13,7 +13,7 @@ body {
 input, textarea {
   padding: 12px;
   margin: 12px 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: transparent;
   color: white;
   border: 1px solid #aaa;
@@ -41,9 +41,8 @@ input::placeholder, textarea::placeholder {
 
 
 .note-app__body {
-  max-width: 1000px;
+  max-width: 90%;
   margin: 16px auto;
-  padding: 12px;
 }
 
 .note-app__body h2 {
@@ -81,12 +80,12 @@ input::placeholder, textarea::placeholder {
   width: 100%;
   padding: 8px;
   background-color: transparent;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: white;
   border: 1px solid #aaa;
   border-radius: 4px;
   font-weight: bold;
-  cursor: pointer;
+  cursor: poPoppins;
 }
 
 .notes-list {
@@ -113,13 +112,28 @@ input::placeholder, textarea::placeholder {
 .note-item__content {
   padding: 12px;
   flex: 1;
+  position: relative;
+  overflow: hidden;
+  background: var(--gradient);
+  border: 2px solid var(--border);
+  backdrop-filter: blur(40px);
+}
+
+.note-item__content > * {
+  position: relative;
+  z-index: 1;
+}
+
+.note-item__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .note-item__title {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  margin-bottom: 4px;
 }
 
 .note-item__date {
@@ -143,9 +157,9 @@ input::placeholder, textarea::placeholder {
   border: 0;
   border-top: 1px solid #aaa;
   padding: 8px 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
-  cursor: pointer;
+  cursor: poPoppins;
 }
 
 .note-item__delete-button {
